
=======================================================
            WanT code:  Log of Changes 
=======================================================


31 Mar 2009      Bug fixed in dealing with CRYSTAL06 datafiles: wan_eig are
                 no longer requested to be in .space file. (AF)

27 Mar 2009      Bug fixed in configure.ac. (AF) 

16 Mar 2009      Bug fixed in compilation without __ETSF_IO support. (AF)

13 Mar 2009      Bug fixed in kpt generation algorithm when interpolating bands
                 (one point was missing). Bug fixed in io_open_dftdata routine
                 when using the crystal interface. (AF)

21 Feb 2009      Bug fixed in the documentation of kpoints.f90 (courtesy of
                 Y.P.Wang). (AF)

18 Feb 2009      kpt sorting (and symmetrization) implemented in blc2wan.f90 .
                 (AF and Tonatiuh Rangel)

17 Feb 2009      Bugs fixed in conductor.f90: dos was not computed correctly;
                 conductance array was going out-of-bounds. Bug fixed when
                 reading efermi from input file. Bug fixed when trying to
                 get the .ham fmt in the case of wannier90 files (failure of
                 iotk getting tags). (AF)
                 wfk2etsf.x utility (abinit binary to etsf converter) added to
                 WanT. (Tonatiuh Rangel)

13 Feb 2009      Bug in autoconf found. output of ETSF_IO_LINE in configure.msg
                 removed to workaround the bug. Support of Wannier90 datafiles
                 added, courtesy of Tonatiuh Rangel; related tests added in
                 test11. (AF)
		 Bug fixed in atomic.f90. (Tonatiuh Rangel)

12 Feb 2009      wannier90 fmt supported in transport; etsf_error handler
                 added (according to a former implementation of Conor Hogan).
                 (AF)

10 Feb 2009      Input files for abinit calculations made more standard
                 (thanks to Tonatiuh Rangel). Test03 improved and references